finalize on the nav bar seciton

--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- navigation bar -->
+    <nav
+      class="container align-items-center  d-flex px-5 justify-content-between "
+    >
+      <div class="logo d-flex align-items-center">
+        <a href="#">
+          <img src="/assets/images/flower-logo.jpeg" alt="Company Logo" />
+        </a>
+        <p class="m-0 pl-1">Fleur Flowers</p>
+      </div>
+
+      <div class="nav-right d-flex align-items-center">
+        <div
+          class="d-md-flex d-none align-items-end justify-content-center mr-3"
+        >
+          <a class="mx-3">Home</a>
+          <a class="mx-3">Products</a>
+          <a class="mx-3">Contacts</a>
+        </div>
+        <span class="heart  d-md-none"><i class="fas fa-bars"></i></span>
+        <span class="heart"><i class="fas fa-heart"></i></span>
+        <span class="cart"><i class="fas fa-shopping-cart"></i></span>
+      </div>
+    </nav>
+    <!-- Main Section -->
+    <main class="container">
+      <div class="row">
+        <div class="col-12 welcome-section">
+
+        </div>
+      </div>
+    </main>
+
     <!-- scripts -->
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
