fix stylint errors and validate html files

--- a/main-page.html
+++ b/main-page.html
@@ -39,6 +39,7 @@
         <span class="cart"><i class="fas fa-shopping-cart"></i></span>
       </div>
     </nav>
+
     <!-- Main Section -->
     <main class="container">
       <div class="row">
@@ -60,7 +61,7 @@
         </div>
       </div>
 
-      <div class="row white  ">
+      <div class="row white ">
         <div
           class="col-12 px-5  pt-5 pb-3 d-flex justify-content-between align-items-center"
         >
@@ -70,87 +71,90 @@
             <i class="fas fa-chevron-right ml-1"></i>
           </div>
         </div>
-        <div class="col-12 px-5 pb-4 style="height: 500px;"">
-        <div class="row  ">
-          <div class="col-12 col-md-6 mb-4">
-            <div class="card  flower-item">
-              <div class="card-body pb-0">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <h5 class="card-title .title">Red Roses</h5>
-                    <h6 class="card-subtitle mb-2 text-muted price">
-                      $400
-                      <span class="cart"
-                        ><i class="fas fa-shopping-cart"></i
-                      ></span>
-                    </h6>
+        <div class="col-12 px-5 pb-4 ">
+          <div class="row  ">
+            <div class="col-12 col-md-6 mb-4">
+              <div class="card  flower-item">
+                <div class="card-body pb-0">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>
+                      <h5 class="card-title .title">Red Roses</h5>
+                      <h6 class="card-subtitle mb-2 text-muted price">
+                        $400
+                        <span class="cart"
+                          ><i class="fas fa-shopping-cart"></i
+                        ></span>
+                      </h6>
+                    </div>
+                    <span class="discount">-50%</span>
                   </div>
-                  <span class="discount">-50%</span>
-                </div>
 
-                <div class="flower-image-one">
-                  <img
-                    class="card-img-top"
-                    src="/assets/images/vas-of-red-roses-transparent-image.png"
-                    alt="Card image cap"
-                  />
+                  <div class="flower-image-one">
+                    <img
+                      class="card-img-top"
+                      src="/assets/images/vas-of-red-roses-transparent-image.png"
+                      alt="Card image cap"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-12  col-md-6">
-            <div class="row ">
-              <div class="col-12">
-                <div class="card flower-image-big flower-item">
-                  <div class="card-body pb-0">
-                    <div
-                      class="d-flex justify-content-between align-items-center"
-                    >
-                      <div>
-                        <h5 class="card-title .title">Red Roses</h5>
-                        <h6 class="card-subtitle mb-2 text-muted price">
-                          $400
-                          <span class="cart"
-                            ><i class="fas fa-shopping-cart"></i
-                          ></span>
-                        </h6>
+            <div class="col-12  col-md-6">
+              <div class="row ">
+                <div class="col-12">
+                  <div class="card flower-image-big flower-item">
+                    <div class="card-body pb-0">
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <div>
+                          <h5 class="card-title .title">Red Roses</h5>
+                          <h6 class="card-subtitle mb-2 text-muted price">
+                            $400
+                            <span class="cart"
+                              ><i class="fas fa-shopping-cart"></i
+                            ></span>
+                          </h6>
+                        </div>
+                        <span class="discount">-50%</span>
                       </div>
-                      <span class="discount">-50%</span>
-                    </div>
-                    <div class="flower-image">
-                      <img
-                        class="card-img-top"
-                        src="/assets/images/vas-of-red-roses-transparent-image.png"
-                        alt="Card image cap"
-                      />
+                      <div class="flower-image">
+                        <img
+                          class="card-img-top"
+                          src="/assets/images/vas-of-red-roses-transparent-image.png"
+                          alt="Card image cap"
+                        />
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-12 ">
-                <div class="card mt-4  flower-item">
-                  <div class="card-body pb-0 ">
-                    <div
-                      class="d-flex justify-content-between align-items-center"
-                    >
-                      <div>
-                        <h5 class="card-title .title">Red Roses</h5>
-                        <h6 class="card-subtitle mb-2 text-muted price">
-                          $400
-                          <span class="cart"
-                            ><i class="fas fa-shopping-cart"></i
-                          ></span>
-                        </h6>
+                <div class="col-12 ">
+                  <div class="card mt-4  flower-item">
+                    <div class="card-body pb-0 ">
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <div>
+                          <h5 class="card-title .title">Red Roses</h5>
+                          <h6 class="card-subtitle mb-2 text-muted price">
+                            $400
+                            <span class="cart"
+                              ><i class="fas fa-shopping-cart"></i
+                            ></span>
+                          </h6>
+                        </div>
+                        <span class="discount">-50%</span>
                       </div>
-                      <span class="discount">-50%</span>
-                    </div>
 
-                    <div class="flower-image">
-                      <img
-                        class="card-img-top"
-                        src="/assets/images/vas-of-red-roses-transparent-image.png"
-                        alt="Card image cap"
-                      />
+                      <div class="flower-image">
+                        <img
+                          class="card-img-top"
+                          src="/assets/images/vas-of-red-roses-transparent-image.png"
+                          alt="Card image cap"
+                        />
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -159,6 +163,7 @@
           </div>
         </div>
       </div>
+
       <!-- wedding corousel -->
       <section class="container wedding-section">
         <div
@@ -226,8 +231,7 @@
         </div>
       </section>
 
-      <!-- TOP FLOWERS picks -->
-
+      <!-- TOP FLOWERS PICKS -->
       <section class="container top-picks">
         <div
           class="col-12 px-5 .gray pt-5 pb-3 d-flex justify-content-between  block-title align-items-center"
@@ -409,14 +413,14 @@
           </div>
 
           <div class="col-12 d-flex align-items-center justify-content-center">
-            <button type="button" class="btn btn-danger mt-4 px-5 flower-btn">
+            <button type="button" class="btn btn-danger my-4 px-5 flower-btn">
               Explore More
             </button>
           </div>
         </div>
       </section>
 
-      <!-- Partner section -->
+      <!-- PARTNER SECTION -->
       <section class="container px-5 pb-5 mt-5 green">
         <div
           class="col-12 px-5  pt-5 pb-3 d-flex justify-content-between  block-title align-items-center .gray"
