finalize on the footer

--- a/main-page.html
+++ b/main-page.html
@@ -63,7 +63,7 @@
 
       <div class="row white ">
         <div
-          class="col-12 px-5  pt-5 pb-3 d-flex justify-content-between align-items-center"
+          class="col-12 px-5  pt-5 pb-3 d-flex block-title gray justify-content-between align-items-center"
         >
           <h2>Trending Flowers</h2>
           <div class="shift-buttons">
@@ -169,7 +169,7 @@
         <div
           class="col-12 px-5  pt-5 pb-3 d-flex justify-content-between  block-title align-items-center"
         >
-          <h2>Trending Flowers</h2>
+          <h2>Wedding Flowers</h2>
           <div class="shift-buttons">
             <i class="fas fa-chevron-left"></i>
             <i class="fas fa-chevron-right ml-1"></i>
@@ -236,7 +236,7 @@
         <div
           class="col-12 px-5 .gray pt-5 pb-3 d-flex justify-content-between  block-title align-items-center"
         >
-          <h2>Trending Flowers</h2>
+          <h2>Featured selection</h2>
         </div>
 
         <div class="row ">
@@ -529,15 +529,21 @@
 
           <div class="col-12  col-md-4">
             <ul class="footer-links my-4">
-              <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
+              <li><a  href="#">Lorem ipsum</a></li>
+              <li><a class="links-even" href="#">Lorem ipsum</a></li>
               <li><a href="#">+7 (987) 654-32-10</a></li>
+              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
               <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
+              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
             </ul>
           </div>
-          <!-- <div class="col-12 col-md-4">3</div> -->
+
+          <div class="col-12  col-md-4 pt-4 ">
+            <div>
+
+              <p  > 2020, Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
