--- a/product-page.html
+++ b/product-page.html
@@ -388,15 +388,21 @@
 
           <div class="col-12  col-md-4">
             <ul class="footer-links my-4">
-              <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
+              <li><a  href="#">Lorem ipsum</a></li>
+              <li><a class="links-even" href="#">Lorem ipsum</a></li>
               <li><a href="#">+7 (987) 654-32-10</a></li>
+              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
               <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
+              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
             </ul>
           </div>
-          <!-- <div class="col-12 col-md-4">3</div> -->
+
+          <div class="col-12  col-md-4 pt-4 ">
+            <div>
+
+              <p  > 2020, Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
