--- a/product-list.html
+++ b/product-list.html
@@ -15,8 +15,6 @@
     <title>Product Page</title>
   </head>
   <body>
-
-
     <!-- the nav bar -->
     <nav
       class="container align-items-center  d-flex px-5 justify-content-between "
@@ -33,8 +31,8 @@
           class="d-md-flex d-none align-items-end justify-content-center mr-3"
         >
           <a href="/product-list.html" class="mx-3">Home</a>
-          <a  href="/product-list.html" class="mx-3">Products</a>
-          <a  href="/product-list.html" class="mx-3">Contacts</a>
+          <a href="/product-list.html" class="mx-3">Products</a>
+          <a href="/product-list.html" class="mx-3">Contacts</a>
         </div>
         <span class="heart  d-md-none"><i class="fas fa-bars"></i></span>
         <span class="heart"><i class="fas fa-heart"></i></span>
@@ -54,7 +52,7 @@
 
         <div class="row">
           <div class="col-12 col-md-3 ">
-            <div
+            <aside
               class="filter-section d-flex flex-column align-items-center justify-content-center"
             >
               <!-- show mainly on small devices -->
@@ -68,7 +66,7 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                <i class="fas fa-filter"></i>
+                  <i class="fas fa-filter"></i>
                   Sort/Filter
                 </a>
 
@@ -78,14 +76,14 @@
                     <div class="track-progress"></div>
                     <div class="bar"></div>
                   </div>
-  
+
                   <div class="min-max-price">
                     <input type="number" class="btn " placeholder="999" />
                     <input type="number" class="btn " placeholder="31500" />
                   </div>
-  
+
                   <h3>Color</h3>
-  
+
                   <div class="color-container flex-row-xd  my-2">
                     <div class="color-item flex-row-xd justify-content-center">
                       <i class="fas fa-check-circle"></i>
@@ -95,7 +93,6 @@
                     <div class="color-item"></div>
                     <div class="color-item"></div>
                   </div>
-
                 </div>
               </div>
 
@@ -197,7 +194,7 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </aside>
           </div>
           <div class="col-12 col-md-9">
             <div class="row">
@@ -491,7 +488,7 @@
       <!-- Footer content -->
       <div class="container  p-5 white  ">
         <div class="row footer-content">
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-4 pt-4">
             <div class=" d-flex align-items-center justify-content-center">
               <button
                 type="button"
@@ -504,15 +501,22 @@
 
           <div class="col-12  col-md-4">
             <ul class="footer-links my-4">
-              <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
+              <li><a  href="#">Lorem ipsum</a></li>
+              <li><a class="links-even" href="#">Lorem ipsum</a></li>
               <li><a href="#">+7 (987) 654-32-10</a></li>
+              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
               <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Lorem ipsum</a></li>
+              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
             </ul>
           </div>
-          <!-- <div class="col-12 col-md-4">3</div> -->
+
+          <div class="col-12  col-md-4 pt-4 ">
+            <div>
+
+              <p  > 2020, Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">3</div>
         </div>
       </div>
     </footer>
