use media queries and fix images changing aspect during browser resize

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
           </div>
         </div>
         <div class="col-12 px-5 pb-4 ">
-          <div class="row  ">
-            <div class="col-12 col-md-6 mb-4">
+          <!-- implement media queries -->
+          <!-- <div class="row  "> -->
+          <!-- <div class="col-12 col-md-6 mb-4">
               <div class="card  flower-item">
                 <div class="card-body pb-0">
                   <div
@@ -157,6 +158,97 @@
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div> -->
+          <!-- </div> -->
+
+          <!--  -->
+
+          <div class="trending-flowers-container">
+            <div class="one ">
+              <div class="card  h-100 flower-item">
+                <div
+                  class="card-body pb-0 d-flex flex-column justify-content-between "
+                >
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>
+                      <h5 class="card-title .title">Red Roses</h5>
+                      <h6 class="card-subtitle mb-2 text-muted price">
+                        $400
+                        <span class="cart"
+                          ><i class="fas fa-shopping-cart"></i
+                        ></span>
+                      </h6>
+                    </div>
+                    <span class="discount">-50%</span>
+                  </div>
+
+                  <!-- <div class="flower-image-one"> -->
+                  <img
+                    class="image-responsive"
+                    src="https://i.pinimg.com/originals/d6/7b/e9/d67be962ab22f10b265a7555f9c20508.png"
+                    alt="Card image cap"
+                  />
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
+            <div class="two">
+              <div class="card  h-100 flower-item">
+                <div class="card-body pb-0">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>
+                      <h5 class="card-title .title">Red Roses</h5>
+                      <h6 class="card-subtitle mb-2 text-muted price">
+                        $400
+                        <span class="cart"
+                          ><i class="fas fa-shopping-cart"></i
+                        ></span>
+                      </h6>
+                    </div>
+                    <span class="discount">-50%</span>
+                  </div>
+
+                  <!-- <div class="flower-image-one"> -->
+                  <img
+                    class="image-responsive"
+                    src="/assets/images/vas-of-red-roses-transparent-image.png"
+                    alt="Card image cap"
+                  />
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
+            <div class="three">
+              <div class="card  h-100 flower-item">
+                <div class="card-body pb-0">
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div>
+                      <h5 class="card-title .title">Red Roses</h5>
+                      <h6 class="card-subtitle mb-2 text-muted price">
+                        $400
+                        <span class="cart"
+                          ><i class="fas fa-shopping-cart"></i
+                        ></span>
+                      </h6>
+                    </div>
+                    <span class="discount">-50%</span>
+                  </div>
+
+                  <!-- <div class="flower-image-one"> -->
+                  <img
+                    class="image-responsive"
+                    src="/assets/images/vas-of-red-roses-transparent-image.png"
+                    alt="Card image cap"
+                  />
+                  <!-- </div> -->
                 </div>
               </div>
             </div>
@@ -529,19 +621,18 @@
 
           <div class="col-12  col-md-4">
             <ul class="footer-links my-4">
-              <li><a  href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
               <li><a class="links-even" href="#">Lorem ipsum</a></li>
               <li><a href="#">+7 (987) 654-32-10</a></li>
-              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
+              <li><a class="links-even" href="#">Lorem ipsum</a></li>
               <li><a href="#">Lorem ipsum</a></li>
-              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
+              <li><a class="links-even" href="#">Lorem ipsum</a></li>
             </ul>
           </div>
 
           <div class="col-12  col-md-4 pt-4 ">
             <div>
-
-              <p  > 2020, Lorem ipsum dolor sit amet consectetur.</p>
+              <p>2020, Lorem ipsum dolor sit amet consectetur.</p>
             </div>
           </div>
         </div>
