used descriptive classes

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <!--  -->
 
           <div class="trending-flowers-container">
-            <div class="one ">
+            <div class="image-one ">
               <div class="card  h-100 flower-item">
                 <div
                   class="card-body pb-0 d-flex flex-column justify-content-between "
