add more h1 heading to the each individual html page

--- a/product-list.html
+++ b/product-list.html
@@ -23,7 +23,7 @@
         <a href="#">
           <img src="/assets/images/flower-logo.jpeg" alt="Company Logo" />
         </a>
-        <p class="m-0 pl-1">Fleur Flowers</p>
+        <h1 class="m-0 pl-1">Fleur Flowers</h1>
       </div>
 
       <div class="nav-right d-flex align-items-center">
