--- a/product-page.html
+++ b/product-page.html
@@ -23,7 +23,7 @@
         <a href="#">
           <img src="/assets/images/flower-logo.jpeg" alt="Company Logo" />
         </a>
-        <p class="m-0 pl-1">Fleur Flowers</p>
+        <h1 class="m-0 pl-1">Fleur Flowers</h1>
       </div>
 
       <div class="nav-right d-flex align-items-center">
@@ -388,19 +388,18 @@
 
           <div class="col-12  col-md-4">
             <ul class="footer-links my-4">
-              <li><a  href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
               <li><a class="links-even" href="#">Lorem ipsum</a></li>
               <li><a href="#">+7 (987) 654-32-10</a></li>
-              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
+              <li><a class="links-even" href="#">Lorem ipsum</a></li>
               <li><a href="#">Lorem ipsum</a></li>
-              <li><a class="links-even"  href="#">Lorem ipsum</a></li>
+              <li><a class="links-even" href="#">Lorem ipsum</a></li>
             </ul>
           </div>
 
           <div class="col-12  col-md-4 pt-4 ">
             <div>
-
-              <p  > 2020, Lorem ipsum dolor sit amet consectetur.</p>
+              <p>2020, Lorem ipsum dolor sit amet consectetur.</p>
             </div>
           </div>
         </div>
