fix stylint errors and validate html files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div
           class="d-md-flex d-none align-items-end justify-content-center mr-3"
         >
-          <a href="/product-list.html" class="mx-3">Home</a>
+          <a href="/index.html" class="mx-3">Home</a>
           <a href="/product-list.html" class="mx-3">Products</a>
           <a href="/product-list.html" class="mx-3">Contacts</a>
         </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="col-12 px-5 pb-4 ">
           <!-- implement media queries -->
-         
+
           <div class="trending-flowers-container">
             <div class="image-one ">
               <div class="card  h-100 flower-item">
@@ -170,7 +170,7 @@
         <div
           class="col-12 px-5  pt-5 pb-3 d-flex justify-content-between  block-title align-items-center"
         >
-          <h1>Wedding Flowers</h1>
+          <h2>Wedding Flowers</h2>
           <div class="shift-buttons">
             <i class="fas fa-chevron-left"></i>
             <i class="fas fa-chevron-right ml-1"></i>
@@ -237,7 +237,7 @@
         <div
           class="col-12 px-5 .gray pt-5 pb-3 d-flex justify-content-between  block-title align-items-center"
         >
-          <h1>Featured selection</h1>
+          <h2>Featured selection</h2>
         </div>
 
         <div class="row ">
